--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "prism-react-renderer": "^1.2.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
-	  "three": "^0.128.0"
+    "three": "^0.128.0"
   },
   "browserslist": {
     "production": [
@@ -34,5 +34,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "lil-gui": "^0.16.0"
   }
 }
