--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "prism-react-renderer": "^1.2.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
-    "three": "^0.133.0"
+    "three": "^0.133.0",
+    "three-spritetext": "^1.6.4"
   },
   "browserslist": {
     "production": [
